--- a/src/app/autores/autores.component.html
+++ b/src/app/autores/autores.component.html
@@ -34,8 +34,8 @@
 </table>
 
 <mat-paginator [length]="100"
-              [pageSize]="2"
-              [pageSizeOptions]="[1, 5, 10, 25, 100]">
+              [pageSize]="5"
+              [pageSizeOptions]="[5, 10, 25, 100]">
 </mat-paginator>
 
 <button mat-fab id="boton-agregar" color="warn" (click)="abrirDialog()">
