--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -4,13 +4,13 @@
       matInput
       type="text"
       id="filt"
-      (keyup)="hacerFiltro($any($event).target.value)"
+      (keyup)="hacerFiltro($event)"
       placeholder="Ingrese Texto"
     />
   </mat-form-field>
 </div>
 
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" matSort (matSortChange)="ordenarColumna($event)" class="mat-elevation-z8">
   <!-- Position Column -->
   <ng-container matColumnDef="titulo">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Titulo</th>
@@ -26,7 +26,7 @@
   <!-- Weight Column -->
   <ng-container matColumnDef="autor">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Autor</th>
-    <td mat-cell *matCellDef="let element">{{ element.autor }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.autor.nombreCompleto }}</td>
   </ng-container>
 
   <!-- Symbol Column -->
@@ -39,9 +39,13 @@
   <tr mat-row *matRowDef="let row; columns: desplegarColumnas"></tr>
 </table>
 
-<mat-paginator [length]="100"
-              [pageSize]="2"
-              [pageSizeOptions]="[1, 5, 10, 25, 100]">
+<mat-paginator
+  (page)="eventoPaginador($event)"
+  #paginacion
+  [length]="totalLibros"
+  [pageSize]="librosPorPagina"
+  [pageSizeOptions]="paginaCombo"
+>
 </mat-paginator>
 
 <button mat-fab id="boton-agregar" color="warn" (click)="abrirDialog()">
