--- a/src/app/inicio.component.html
+++ b/src/app/inicio.component.html
@@ -4,7 +4,7 @@
   <div>
     <h2>
       <a [routerLink]="['/books']">
-          <mat-icon>library_books</mat-icon>Books
+          <mat-icon>import_contacts</mat-icon>Books
       </a>
     </h2>
   </div>
@@ -12,7 +12,7 @@
   <div>
     <h2>
         <a [routerLink]="['/autores']">
-        <mat-icon>rate_review</mat-icon>Autores
+        <mat-icon>supervisor_account</mat-icon>Autores
         </a>
     </h2>
   </div>
